k8s/healthz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthz
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthz
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: healthz
    spec:
      containers:
        - name: healthz
          image: s1natex/service-discovery:healthz-20251005-b859824
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6000
          readinessProbe:
            httpGet:
              path: /health
              port: 6000
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /health
              port: 6000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: healthz
  namespace: app
spec:
  selector:
    app: healthz
  ports:
    - port: 6000
      targetPort: 6000
      protocol: TCP
  type: ClusterIP
