k8s/service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: s1natex/service-discovery:service-20251005-1a14c94
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /info
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /info
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: app
spec:
  selector:
    app: service-a
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
