k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-discovery-ingress
  namespace: service-discovery
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Frontend at /
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          # Gateway endpoints directly on these paths
          - path: /services
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8000
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8000
